[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/DL/3D/NetworkModuleActionSelector.gd" type="Script" id=2]
[ext_resource path="res://Assets/VRInteraction/PointablePushButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Stuff/QuickLabel.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Materials/test_material.tres" type="Material" id=5]

[sub_resource type="CubeMesh" id=5]
size = Vector3( 0.2, 0.01, 0.05 )

[node name="NetworkModuleActionSelector" type="Spatial"]
script = ExtResource( 2 )

[node name="MeshInstance3" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00872922, 0.976753, 0.150036 )
mesh = SubResource( 5 )
skeleton = NodePath("../..")
material/0 = ExtResource( 5 )

[node name="ActionLabel" parent="." instance=ExtResource( 4 )]
transform = Transform( 2, 0, 0, 0, -8.74228e-08, 2, 0, -2, -8.74228e-08, -0.00325549, 0.982701, 0.149 )
text = "Choose an action"

[node name="QuickLabel5" parent="." instance=ExtResource( 4 )]
transform = Transform( 3, 0, 0, 0, -1.31134e-07, 3, 0, -3, -1.31134e-07, 0.134518, 0.97823, 0.185365 )
text = "Go"

[node name="DecrementActionButton" parent="." instance=ExtResource( 3 )]
transform = Transform( 0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, -0.141876, 0.980098, 0.126685 )

[node name="IncrementActionButton" parent="." instance=ExtResource( 3 )]
transform = Transform( 0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, -0.141876, 0.980098, 0.172829 )

[node name="ExecuteActionButton" parent="." instance=ExtResource( 3 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0.135407, 0.97473, 0.148622 )

[connection signal="pointer_pressed" from="DecrementActionButton/Button" to="." method="decrement_action"]
[connection signal="button_pressed" from="DecrementActionButton/InteractableAreaButton" to="." method="decrement_action"]
[connection signal="pointer_pressed" from="IncrementActionButton/Button" to="." method="increment_action"]
[connection signal="button_pressed" from="IncrementActionButton/InteractableAreaButton" to="." method="increment_action"]
[connection signal="pointer_pressed" from="ExecuteActionButton/Button" to="." method="perform_action"]
[connection signal="button_pressed" from="ExecuteActionButton/InteractableAreaButton" to="." method="perform_action"]

[editable path="DecrementActionButton"]
[editable path="IncrementActionButton"]
[editable path="ExecuteActionButton"]
